Update configuration files; enhance database connection settings and service discovery parameters