@@ -1,10 +1,6 @@
 package com.stag.platform.codelist.grpc;
 
 import com.stag.platform.codelist.entity.CodelistEntryId;
-import com.stag.platform.codelist.entity.Country;
-import com.stag.platform.codelist.entity.District;
-import com.stag.platform.codelist.entity.Municipality;
-import com.stag.platform.codelist.entity.MunicipalityPart;
 import com.stag.platform.codelist.projection.CodelistEntryValue;
 import com.stag.platform.codelist.service.CodelistService;
 import com.stag.platform.codelist.service.CountryService;
@@ -15,32 +11,23 @@ import com.stag.platform.codelist.v1.CodelistKey;
 import com.stag.platform.codelist.v1.CodelistServiceGrpc;
 import com.stag.platform.codelist.v1.CodelistValue;
 import com.stag.platform.codelist.v1.CountryName;
-import com.stag.platform.codelist.v1.CountryValue;
-import com.stag.platform.codelist.v1.DistrictValue;
 import com.stag.platform.codelist.v1.GetCodelistValuesRequest;
 import com.stag.platform.codelist.v1.GetCodelistValuesResponse;
-import com.stag.platform.codelist.v1.GetPersonAddressDataRequest;
-import com.stag.platform.codelist.v1.GetPersonAddressDataResponse;
-import com.stag.platform.codelist.v1.GetPersonBankingDataRequest;
-import com.stag.platform.codelist.v1.GetPersonBankingDataResponse;
-import com.stag.platform.codelist.v1.GetPersonEducationDataRequest;
-import com.stag.platform.codelist.v1.GetPersonEducationDataResponse;
 import com.stag.platform.codelist.v1.GetPersonProfileDataRequest;
 import com.stag.platform.codelist.v1.GetPersonProfileDataResponse;
-import com.stag.platform.codelist.v1.MunicipalityPartValue;
-import com.stag.platform.codelist.v1.MunicipalityValue;
 import io.grpc.stub.StreamObserver;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import net.devh.boot.grpc.server.service.GrpcService;
 
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Stream;
+import java.util.concurrent.Executor;
+import java.util.function.Consumer;
 
 @Slf4j
 @GrpcService
@@ -49,6 +36,7 @@ public class CodelistGrpcService extends CodelistServiceGrpc.CodelistServiceImpl
 
     private static final String CZECH_LANGUAGE = "cs";
 
+    private final Executor grpcExecutor;
     private final CodelistService codelistService;
     private final CountryService countryService;
     private final MunicipalityService municipalityService;
@@ -57,11 +45,10 @@ public class CodelistGrpcService extends CodelistServiceGrpc.CodelistServiceImpl
 
     @Override
     public void getCodelistValues(GetCodelistValuesRequest request, StreamObserver<GetCodelistValuesResponse> responseObserver) {
+        List<CodelistValue> codelistValues = buildCodelistValues(request.getCodelistKeysList(), request.getLanguage());
+
         var response = GetCodelistValuesResponse.newBuilder()
-                                                .addAllCodelistValues(buildCodelistValues(
-                                                    request.getCodelistKeysList(),
-                                                    request.getLanguage()
-                                                ))
+                                                .addAllCodelistValues(codelistValues)
                                                 .build();
 
         completeResponse(responseObserver, response);
@@ -70,11 +57,13 @@ public class CodelistGrpcService extends CodelistServiceGrpc.CodelistServiceImpl
     @Override
     public void getPersonProfileData(GetPersonProfileDataRequest request, StreamObserver<GetPersonProfileDataResponse> responseObserver) {
         CompletableFuture<List<CodelistValue>> codelistValuesFuture = CompletableFuture.supplyAsync(
-            () -> buildCodelistValues(request.getCodelistKeysList(), request.getLanguage())
+            () -> buildCodelistValues(request.getCodelistKeysList(), request.getLanguage()),
+            grpcExecutor
         );
 
         CompletableFuture<Map<Integer, String>> countryNamesFuture = CompletableFuture.supplyAsync(
-            () -> getCountryNames(request)
+            () -> getCountryNames(request),
+            grpcExecutor
         );
 
         codelistValuesFuture.thenCombine(countryNamesFuture, (codelistValues, countryNames) ->
@@ -84,62 +73,11 @@ public class CodelistGrpcService extends CodelistServiceGrpc.CodelistServiceImpl
                             .exceptionally(ex -> errorResponse(responseObserver, ex));
     }
 
-    @Override
-    public void getPersonAddressData(GetPersonAddressDataRequest request, StreamObserver<GetPersonAddressDataResponse> responseObserver) {
-        var responseBuilder = GetPersonAddressDataResponse.newBuilder();
-
-        // Add permanent residence data
-        addAddressData(request, responseBuilder, true);
-
-        // Add temporary residence data
-        addAddressData(request, responseBuilder, false);
-
-        completeResponse(responseObserver, responseBuilder.build());
-    }
-
-    @Override
-    public void getPersonBankingData(
-        GetPersonBankingDataRequest request,
-        StreamObserver<GetPersonBankingDataResponse> responseObserver
-    ) {
-        var response =
-            GetPersonBankingDataResponse.newBuilder()
-                                        .addAllCodelistValues(buildCodelistValues(
-                                            request.getCodelistKeysList(),
-                                            request.getLanguage()
-                                        ))
-                                        .build();
-
-        completeResponse(responseObserver, response);
-    }
-
-    @Override
-    public void getPersonEducationData(
-        GetPersonEducationDataRequest request,
-        StreamObserver<GetPersonEducationDataResponse> responseObserver
-    ) {
-        var responseBuilder =
-            GetPersonEducationDataResponse.newBuilder()
-                                          .addAllCodelistValues(buildCodelistValues(
-                                              request.getCodelistKeysList(),
-                                              request.getLanguage()
-                                          ));
-
-        // Add high school country if present
-        if (request.hasHighSchoolCountryId()) {
-            countryService.findById(request.getHighSchoolCountryId())
-                          .map(this::toCountryValue)
-                          .ifPresent(responseBuilder::setHighSchoolCountry);
-        }
-
-        completeResponse(responseObserver, responseBuilder.build());
-    }
-
     // Private helper methods
 
     private List<CodelistValue> buildCodelistValues(List<CodelistKey> codelistKeys, String language) {
         if (codelistKeys.isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
 
         List<CodelistEntryId> entryIds = codelistKeys.stream()
@@ -153,17 +91,19 @@ public class CodelistGrpcService extends CodelistServiceGrpc.CodelistServiceImpl
     }
 
     private Map<Integer, String> getCountryNames(GetPersonProfileDataRequest request) {
-        // If neither country is present, skip adding names
-        if (!request.hasBirthCountryId() && !request.hasCitizenshipCountryId()) {
-            return Collections.emptyMap();
+        Set<Integer> countryIds = HashSet.newHashSet(2);
+
+        if (request.hasBirthCountryId()) {
+            countryIds.add(request.getBirthCountryId());
+        }
+        if (request.hasCitizenshipCountryId()) {
+            countryIds.add(request.getCitizenshipCountryId());
         }
 
-        List<Integer> countryIds = Stream.of(
-                                             request.hasBirthCountryId() ? request.getBirthCountryId() : null,
-                                             request.hasCitizenshipCountryId() ? request.getCitizenshipCountryId() : null
-                                         )
-                                         .filter(Objects::nonNull)
-                                         .toList();
+        // If neither country is present, skip adding names
+        if (countryIds.isEmpty()) {
+            return Collections.emptyMap();
+        }
 
         return countryService.findNamesByIds(countryIds);
     }
@@ -173,113 +113,26 @@ public class CodelistGrpcService extends CodelistServiceGrpc.CodelistServiceImpl
         List<CodelistValue> codelistValues,
         Map<Integer, String> countryNames
     ) {
-        var responseBuilder = GetPersonProfileDataResponse.newBuilder()
-                                                          .addAllCodelistValues(codelistValues);
+        var responseBuilder = GetPersonProfileDataResponse.newBuilder().addAllCodelistValues(codelistValues);
 
-        // Add country names if present
         if (!countryNames.isEmpty()) {
-            if (request.hasBirthCountryId() && countryNames.containsKey(request.getBirthCountryId())) {
-                responseBuilder.setBirthCountryName(toCountryName(countryNames.get(request.getBirthCountryId())));
-            }
-            if (request.hasCitizenshipCountryId() && countryNames.containsKey(request.getCitizenshipCountryId())) {
-                responseBuilder.setCitizenshipCountryName(toCountryName(countryNames.get(request.getCitizenshipCountryId())));
-            }
+            processCountryName(countryNames, request.getBirthCountryId(), responseBuilder::setBirthCountryName);
+            processCountryName(countryNames, request.getCitizenshipCountryId(), responseBuilder::setCitizenshipCountryName);
         }
 
         return responseBuilder.build();
     }
 
-    private void addAddressData(
-        GetPersonAddressDataRequest request,
-        GetPersonAddressDataResponse.Builder responseBuilder,
-        boolean isPermanent
+    private void processCountryName(
+        Map<Integer, String> countryNames,
+        Integer countryId,
+        Consumer<CountryName> setter
     ) {
-        // Country
-        getCountryId(request, isPermanent)
-            .flatMap(countryService::findById)
-            .map(this::toCountryValue)
-            .ifPresent(country -> setCountry(responseBuilder, country, isPermanent));
-
-        // Municipality
-        getMunicipalityId(request, isPermanent)
-            .flatMap(municipalityService::findById)
-            .map(this::toMunicipalityValue)
-            .ifPresent(municipality -> setMunicipality(responseBuilder, municipality, isPermanent));
-
-        // Municipality Part
-        getMunicipalityPartId(request, isPermanent)
-            .flatMap(municipalityPartService::findById)
-            .map(this::toMunicipalityPartValue)
-            .ifPresent(part -> setMunicipalityPart(responseBuilder, part, isPermanent));
-
-        // District
-        getDistrictId(request, isPermanent)
-            .flatMap(districtService::findById)
-            .map(this::toDistrictValue)
-            .ifPresent(district -> setDistrict(responseBuilder, district, isPermanent));
-    }
-
-    private Optional<Integer> getCountryId(GetPersonAddressDataRequest request, boolean isPermanent) {
-        return isPermanent && request.hasPermanentCountryId() ?
-            Optional.of(request.getPermanentCountryId()) :
-            !isPermanent && request.hasTemporaryCountryId() ?
-                Optional.of(request.getTemporaryCountryId()) : Optional.empty();
-    }
-
-    private Optional<Long> getMunicipalityId(GetPersonAddressDataRequest request, boolean isPermanent) {
-        return isPermanent && request.hasPermanentMunicipalityId() ?
-            Optional.of(request.getPermanentMunicipalityId()) :
-            !isPermanent && request.hasTemporaryMunicipalityId() ?
-                Optional.of(request.getTemporaryMunicipalityId()) : Optional.empty();
-    }
-
-    private Optional<Long> getMunicipalityPartId(GetPersonAddressDataRequest request, boolean isPermanent) {
-        return isPermanent && request.hasPermanentMunicipalityPartId() ?
-            Optional.of(request.getPermanentMunicipalityPartId()) :
-            !isPermanent && request.hasTemporaryMunicipalityPartId() ?
-                Optional.of(request.getTemporaryMunicipalityPartId()) : Optional.empty();
-    }
-
-    private Optional<Integer> getDistrictId(GetPersonAddressDataRequest request, boolean isPermanent) {
-        return isPermanent && request.hasPermanentDistrictId() ?
-            Optional.of(request.getPermanentDistrictId()) :
-            !isPermanent && request.hasTemporaryDistrictId() ?
-                Optional.of(request.getTemporaryDistrictId()) : Optional.empty();
-    }
-
-    private void setCountry(GetPersonAddressDataResponse.Builder builder, CountryValue country, boolean isPermanent) {
-        if (isPermanent) {
-            builder.setPermanentCountry(country);
-        }
-        else {
-            builder.setTemporaryCountry(country);
-        }
-    }
-
-    private void setMunicipality(GetPersonAddressDataResponse.Builder builder, MunicipalityValue municipality, boolean isPermanent) {
-        if (isPermanent) {
-            builder.setPermanentMunicipality(municipality);
-        }
-        else {
-            builder.setTemporaryMunicipality(municipality);
-        }
-    }
-
-    private void setMunicipalityPart(GetPersonAddressDataResponse.Builder builder, MunicipalityPartValue part, boolean isPermanent) {
-        if (isPermanent) {
-            builder.setPermanentMunicipalityPart(part);
-        }
-        else {
-            builder.setTemporaryMunicipalityPart(part);
-        }
-    }
-
-    private void setDistrict(GetPersonAddressDataResponse.Builder builder, DistrictValue district, boolean isPermanent) {
-        if (isPermanent) {
-            builder.setPermanentDistrict(district);
-        }
-        else {
-            builder.setTemporaryDistrict(district);
+        if (countryId != null) {
+            String countryName = countryNames.get(countryId);
+            if (countryName != null) {
+                setter.accept(toCountryName(countryName));
+            }
         }
     }
 
@@ -301,54 +154,21 @@ public class CodelistGrpcService extends CodelistServiceGrpc.CodelistServiceImpl
     }
 
     private CodelistValue toCodelistValue(CodelistEntryValue entry, String language) {
-        String meaning = CZECH_LANGUAGE.equalsIgnoreCase(language) ?
-            entry.getMeaningCz() : entry.getMeaningEn();
+        String meaning = CZECH_LANGUAGE.equalsIgnoreCase(language)
+            ? entry.getMeaningCz()
+            : entry.getMeaningEn();
 
         return CodelistValue.newBuilder()
-                            .setDomain(entry.getId()
-                                            .getDomain())
-                            .setLowValue(entry.getId()
-                                              .getLowValue())
+                            .setDomain(entry.getId().getDomain())
+                            .setLowValue(entry.getId().getLowValue())
                             .setMeaning(meaning)
                             .build();
-    }
-
-    private CountryValue toCountryValue(Country country) {
-        return CountryValue.newBuilder()
-                           .setId(country.getId())
-                           .setName(country.getName())
-                           .setEnglishName(country.getEnglishName())
-                           .setAbbreviation(country.getAbbreviation())
-                           .build();
     }
 
     private CountryName toCountryName(String name) {
         return CountryName.newBuilder()
                           .setName(name)
                           .build();
-    }
-
-    private MunicipalityValue toMunicipalityValue(Municipality municipality) {
-        return MunicipalityValue.newBuilder()
-                                .setId(municipality.getId())
-                                .setName(municipality.getName())
-                                .setAbbreviation(municipality.getAbbreviation())
-                                .build();
-    }
-
-    private MunicipalityPartValue toMunicipalityPartValue(MunicipalityPart municipalityPart) {
-        return MunicipalityPartValue.newBuilder()
-                                    .setId(municipalityPart.getId())
-                                    .setName(municipalityPart.getName())
-                                    .build();
-    }
-
-    private DistrictValue toDistrictValue(District district) {
-        return DistrictValue.newBuilder()
-                            .setId(district.getId())
-                            .setName(district.getName())
-                            .setAbbreviation(district.getAbbreviation())
-                            .build();
     }
 
 }
